[gd_scene load_steps=10 format=4 uid="uid://c2a2vpliqkufx"]

[ext_resource type="Script" path="res://scripts/World.gd" id="1_2emr4"]
[ext_resource type="TileSet" uid="uid://bru6c57447abq" path="res://tiles/background.tres" id="2_bwmbc"]
[ext_resource type="TileSet" uid="uid://cf516p3bd2t1v" path="res://tiles/world.tres" id="3_fnonx"]
[ext_resource type="Script" path="res://scripts/SpawnPoint.gd" id="4_4lsgw"]
[ext_resource type="PackedScene" uid="uid://cjahx4qiw0rlv" path="res://scenes/items/coin.tscn" id="5_eg1vl"]
[ext_resource type="PackedScene" uid="uid://ta2kus8p0r8f" path="res://scenes/characters/player.tscn" id="6_lew0c"]
[ext_resource type="PackedScene" uid="uid://m2agj2g2u6vw" path="res://scenes/worlds/warp_zone.tscn" id="8_dfy0j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11pcs"]
size = Vector2(8, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icqrj"]
size = Vector2(8, 288)

[node name="SubWarp" type="Node2D"]
script = ExtResource("1_2emr4")

[node name="TileMap" type="Node2D" parent="."]

[node name="Background" type="TileMapLayer" parent="TileMap"]
z_index = -3
z_as_relative = false
tile_map_data = PackedByteArray("AAAAAAAAAAADABUAAAAAAAEAAAADABUAAAAAAAIAAAADABUAAAAAAAMAAAADABUAAAAAAAQAAAADABUAAAAAAAUAAAADABUAAAAAAAYAAAADABUAAAAAAAcAAAADABUAAAAAAAgAAAADABUAAAAAAAkAAAADABUAAAAAAAoAAAADABUAAAAAAAsAAAADABUAAAAAAAwAAAADABUAAAAAAA0AAAADABUAAAAAAA4AAAADABUAAAAAAA8AAAADABUAAAABAAAAAAADABUAAAABAAEAAAADABUAAAABAAIAAAADABUAAAABAAMAAAADABUAAAABAAQAAAADABUAAAABAAUAAAADABUAAAABAAYAAAADABUAAAABAAcAAAADABUAAAABAAgAAAADABUAAAABAAkAAAADABUAAAABAAoAAAADABUAAAABAAsAAAADABUAAAABAAwAAAADABUAAAABAA0AAAADABUAAAABAA4AAAADABUAAAABAA8AAAADABUAAAACAAAAAAADABUAAAACAAEAAAADABUAAAACAAIAAAADABUAAAACAAMAAAADABUAAAACAAQAAAADABUAAAACAAUAAAADABUAAAACAAYAAAADABUAAAACAAcAAAADABUAAAACAAgAAAADABUAAAACAAkAAAADABUAAAACAAoAAAADABUAAAACAAsAAAADABUAAAACAAwAAAADABUAAAACAA0AAAADABUAAAACAA4AAAADABUAAAACAA8AAAADABUAAAADAAAAAAADABUAAAADAAEAAAADABUAAAADAAIAAAADABUAAAADAAMAAAADABUAAAADAAQAAAADABUAAAADAAUAAAADABUAAAADAAYAAAADABUAAAADAAcAAAADABUAAAADAAgAAAADABUAAAADAAkAAAADABUAAAADAAoAAAADABUAAAADAAsAAAADABUAAAADAAwAAAADABUAAAADAA0AAAADABUAAAADAA4AAAADABUAAAADAA8AAAADABUAAAAEAAAAAAADABUAAAAEAAEAAAADABUAAAAEAAIAAAADABUAAAAEAAMAAAADABUAAAAEAAQAAAADABUAAAAEAAUAAAADABUAAAAEAAYAAAADABUAAAAEAAcAAAADABUAAAAEAAgAAAADABUAAAAEAAkAAAADABUAAAAEAAoAAAADABUAAAAEAAsAAAADABUAAAAEAAwAAAADABUAAAAEAA0AAAADABUAAAAFAAAAAAADABUAAAAFAAEAAAADABUAAAAFAAIAAAADABUAAAAFAAMAAAADABUAAAAFAAQAAAADABUAAAAFAAUAAAADABUAAAAFAAYAAAADABUAAAAFAAcAAAADABUAAAAFAAgAAAADABUAAAAFAAkAAAADABUAAAAFAAoAAAADABUAAAAFAAsAAAADABUAAAAFAAwAAAADABUAAAAFAA0AAAADABUAAAAFAA4AAAADABUAAAAFAA8AAAADABUAAAAGAAAAAAADABUAAAAGAAEAAAADABUAAAAGAAIAAAADABUAAAAGAAMAAAADABUAAAAGAAQAAAADABUAAAAGAAUAAAADABUAAAAGAAYAAAADABUAAAAGAAcAAAADABUAAAAGAAgAAAADABUAAAAGAAkAAAADABUAAAAGAAoAAAADABUAAAAGAAsAAAADABUAAAAGAAwAAAADABUAAAAGAA0AAAADABUAAAAGAA4AAAADABUAAAAGAA8AAAADABUAAAAHAAAAAAADABUAAAAHAAEAAAADABUAAAAHAAIAAAADABUAAAAHAAMAAAADABUAAAAHAAQAAAADABUAAAAHAAUAAAADABUAAAAHAAYAAAADABUAAAAHAAcAAAADABUAAAAHAAgAAAADABUAAAAHAAkAAAADABUAAAAHAAoAAAADABUAAAAHAAsAAAADABUAAAAHAAwAAAADABUAAAAHAA0AAAADABUAAAAHAA4AAAADABUAAAAHAA8AAAADABUAAAAIAAAAAAADABUAAAAIAAEAAAADABUAAAAIAAIAAAADABUAAAAIAAMAAAADABUAAAAIAAQAAAADABUAAAAIAAUAAAADABUAAAAIAAYAAAADABUAAAAIAAcAAAADABUAAAAIAAgAAAADABUAAAAIAAkAAAADABUAAAAIAAoAAAADABUAAAAIAAsAAAADABUAAAAIAAwAAAADABUAAAAIAA0AAAADABUAAAAIAA4AAAADABUAAAAIAA8AAAADABUAAAAJAAAAAAADABUAAAAJAAEAAAADABUAAAAJAAIAAAADABUAAAAJAAMAAAADABUAAAAJAAQAAAADABUAAAAJAAUAAAADABUAAAAJAAYAAAADABUAAAAJAAcAAAADABUAAAAJAAgAAAADABUAAAAJAAkAAAADABUAAAAJAAoAAAADABUAAAAJAAsAAAADABUAAAAJAAwAAAADABUAAAAJAA0AAAADABUAAAAJAA4AAAADABUAAAAJAA8AAAADABUAAAAKAAAAAAADABUAAAAKAAEAAAADABUAAAAKAAIAAAADABUAAAAKAAMAAAADABUAAAAKAAQAAAADABUAAAAKAAUAAAADABUAAAAKAAYAAAADABUAAAAKAAcAAAADABUAAAAKAAgAAAADABUAAAAKAAkAAAADABUAAAAKAAoAAAADABUAAAAKAAsAAAADABUAAAAKAAwAAAADABUAAAAKAA0AAAADABUAAAAKAA4AAAADABUAAAAKAA8AAAADABUAAAALAAAAAAADABUAAAALAAEAAAADABUAAAALAAIAAAADABUAAAALAAMAAAADABUAAAALAAQAAAADABUAAAALAAUAAAADABUAAAALAAYAAAADABUAAAALAAcAAAADABUAAAALAAgAAAADABUAAAALAAkAAAADABUAAAALAAoAAAADABUAAAALAAsAAAADABUAAAALAAwAAAADABUAAAALAA0AAAADABUAAAALAA4AAAADABUAAAALAA8AAAADABUAAAAMAAAAAAADABUAAAAMAAEAAAADABUAAAAMAAIAAAADABUAAAAMAAMAAAADABUAAAAMAAQAAAADABUAAAAMAAUAAAADABUAAAAMAAYAAAADABUAAAAMAAcAAAADABUAAAAMAAgAAAADABUAAAAMAAkAAAADABUAAAAMAAoAAAADABUAAAAMAAsAAAADABUAAAAMAAwAAAADABUAAAAMAA0AAAADABUAAAAMAA4AAAADABUAAAAMAA8AAAADABUAAAANAAAAAAADABUAAAANAAEAAAADABUAAAANAAIAAAADABUAAAANAAMAAAADABUAAAANAAQAAAADABUAAAANAAUAAAADABUAAAANAAYAAAADABUAAAANAAcAAAADABUAAAANAAgAAAADABUAAAANAAkAAAADABUAAAANAAoAAAADABUAAAANAAsAAAADABUAAAANAAwAAAADABUAAAANAA0AAAADABUAAAANAA4AAAADABUAAAANAA8AAAADABUAAAAOAAAAAAADABUAAAAOAAEAAAADABUAAAAOAAIAAAADABUAAAAOAAMAAAADABUAAAAOAAQAAAADABUAAAAOAAUAAAADABUAAAAOAAYAAAADABUAAAAOAAcAAAADABUAAAAOAAgAAAADABUAAAAOAAkAAAADABUAAAAOAAoAAAADABUAAAAOAAsAAAADABUAAAAOAAwAAAADABUAAAAOAA0AAAADABUAAAAOAA4AAAADABUAAAAOAA8AAAADABUAAAAPAAAAAAADABUAAAAPAAEAAAADABUAAAAPAAIAAAADABUAAAAPAAMAAAADABUAAAAPAAQAAAADABUAAAAPAAUAAAADABUAAAAPAAYAAAADABUAAAAPAAcAAAADABUAAAAPAAgAAAADABUAAAAPAAkAAAADABUAAAAPAAoAAAADABUAAAAPAAsAAAADABUAAAAPAAwAAAADABUAAAAPAA0AAAADABUAAAAPAA4AAAADABUAAAAPAA8AAAADABUAAAAQAAAAAAADABUAAAAQAAEAAAADABUAAAAQAAIAAAADABUAAAAQAAMAAAADABUAAAAQAAQAAAADABUAAAAQAAUAAAADABUAAAAQAAYAAAADABUAAAAQAAcAAAADABUAAAAQAAgAAAADABUAAAAQAAkAAAADABUAAAAQAAoAAAADABUAAAAQAAsAAAADABUAAAAQAAwAAAADABUAAAAQAA0AAAADABUAAAAQAA4AAAADABUAAAAQAA8AAAADABUAAAARAAAAAAADABUAAAARAAEAAAADABUAAAARAAIAAAADABUAAAARAAMAAAADABUAAAARAAQAAAADABUAAAARAAUAAAADABUAAAARAAYAAAADABUAAAARAAcAAAADABUAAAARAAgAAAADABUAAAARAAkAAAADABUAAAARAAoAAAADABUAAAARAAsAAAADABUAAAARAAwAAAADABUAAAARAA0AAAADABUAAAARAA4AAAADABUAAAARAA8AAAADABUAAAASAAAAAAADABUAAAASAAEAAAADABUAAAASAAIAAAADABUAAAASAAMAAAADABUAAAASAAQAAAADABUAAAASAAUAAAADABUAAAASAAYAAAADABUAAAASAAcAAAADABUAAAASAAgAAAADABUAAAASAAkAAAADABUAAAASAAoAAAADABUAAAASAAsAAAADABUAAAASAAwAAAADABUAAAASAA0AAAADABUAAAASAA4AAAADABUAAAASAA8AAAADABUAAAATAAAAAAADABUAAAATAAEAAAADABUAAAATAAIAAAADABUAAAATAAMAAAADABUAAAATAAQAAAADABUAAAATAAUAAAADABUAAAATAAYAAAADABUAAAATAAcAAAADABUAAAATAAgAAAADABUAAAATAAkAAAADABUAAAATAAoAAAADABUAAAATAAsAAAADABUAAAATAAwAAAADABUAAAATAA0AAAADABUAAAATAA4AAAADABUAAAATAA8AAAADABUAAAAUAAAAAAADABUAAAAUAAEAAAADABUAAAAUAAIAAAADABUAAAAUAAMAAAADABUAAAAUAAQAAAADABUAAAAUAAUAAAADABUAAAAUAAYAAAADABUAAAAUAAcAAAADABUAAAAUAAgAAAADABUAAAAUAAkAAAADABUAAAAUAAoAAAADABUAAAAUAAsAAAADABUAAAAUAAwAAAADABUAAAAUAA0AAAADABUAAAAUAA4AAAADABUAAAAUAA8AAAADABUAAAAVAAAAAAADABUAAAAVAAEAAAADABUAAAAVAAIAAAADABUAAAAVAAMAAAADABUAAAAVAAQAAAADABUAAAAVAAUAAAADABUAAAAVAAYAAAADABUAAAAVAAcAAAADABUAAAAVAAgAAAADABUAAAAVAAkAAAADABUAAAAVAAoAAAADABUAAAAVAAsAAAADABUAAAAVAAwAAAADABUAAAAVAA0AAAADABUAAAAVAA4AAAADABUAAAAVAA8AAAADABUAAAAWAAAAAAADABUAAAAWAAEAAAADABUAAAAWAAIAAAADABUAAAAWAAMAAAADABUAAAAWAAQAAAADABUAAAAWAAUAAAADABUAAAAWAAYAAAADABUAAAAWAAcAAAADABUAAAAWAAgAAAADABUAAAAWAAkAAAADABUAAAAWAAoAAAADABUAAAAWAAsAAAADABUAAAAWAAwAAAADABUAAAAWAA0AAAADABUAAAAWAA4AAAADABUAAAAWAA8AAAADABUAAAAXAAAAAAADABUAAAAXAAEAAAADABUAAAAXAAIAAAADABUAAAAXAAMAAAADABUAAAAXAAQAAAADABUAAAAXAAUAAAADABUAAAAXAAYAAAADABUAAAAXAAcAAAADABUAAAAXAAgAAAADABUAAAAXAAkAAAADABUAAAAXAAoAAAADABUAAAAXAAsAAAADABUAAAAXAAwAAAADABUAAAAXAA0AAAADABUAAAAXAA4AAAADABUAAAAXAA8AAAADABUAAAAYAAAAAAADABUAAAAYAAEAAAADABUAAAAYAAIAAAADABUAAAAYAAMAAAADABUAAAAYAAQAAAADABUAAAAYAAUAAAADABUAAAAYAAYAAAADABUAAAAYAAcAAAADABUAAAAYAAgAAAADABUAAAAYAAkAAAADABUAAAAYAAoAAAADABUAAAAYAAsAAAADABUAAAAYAAwAAAADABUAAAAYAA0AAAADABUAAAAYAA4AAAADABUAAAAYAA8AAAADABUAAAAZAAAAAAADABUAAAAZAAEAAAADABUAAAAZAAIAAAADABUAAAAZAAMAAAADABUAAAAZAAQAAAADABUAAAAZAAUAAAADABUAAAAZAAYAAAADABUAAAAZAAcAAAADABUAAAAZAAgAAAADABUAAAAZAAkAAAADABUAAAAZAAoAAAADABUAAAAZAAsAAAADABUAAAAZAAwAAAADABUAAAAZAA0AAAADABUAAAAZAA4AAAADABUAAAAZAA8AAAADABUAAAAaAAAAAAADABUAAAAaAAEAAAADABUAAAAaAAIAAAADABUAAAAaAAMAAAADABUAAAAaAAQAAAADABUAAAAaAAUAAAADABUAAAAaAAYAAAADABUAAAAaAAcAAAADABUAAAAaAAgAAAADABUAAAAaAAkAAAADABUAAAAaAAoAAAADABUAAAAaAAsAAAADABUAAAAaAAwAAAADABUAAAAaAA0AAAADABUAAAAaAA4AAAADABUAAAAaAA8AAAADABUAAAAbAAAAAAADABUAAAAbAAEAAAADABUAAAAbAAIAAAADABUAAAAbAAMAAAADABUAAAAbAAQAAAADABUAAAAbAAUAAAADABUAAAAbAAYAAAADABUAAAAbAAcAAAADABUAAAAbAAgAAAADABUAAAAbAAkAAAADABUAAAAbAAoAAAADABUAAAAbAAsAAAADABUAAAAbAAwAAAADABUAAAAbAA0AAAADABUAAAAbAA4AAAADABUAAAAbAA8AAAADABUAAAAcAAAAAAADABUAAAAcAAEAAAADABUAAAAcAAIAAAADABUAAAAcAAMAAAADABUAAAAcAAQAAAADABUAAAAcAAUAAAADABUAAAAcAAYAAAADABUAAAAcAAcAAAADABUAAAAcAAgAAAADABUAAAAcAAkAAAADABUAAAAcAAoAAAADABUAAAAcAAsAAAADABUAAAAcAAwAAAADABUAAAAcAA0AAAADABUAAAAcAA4AAAADABUAAAAcAA8AAAADABUAAAAdAAAAAAADABUAAAAdAAEAAAADABUAAAAdAAIAAAADABUAAAAdAAMAAAADABUAAAAdAAQAAAADABUAAAAdAAUAAAADABUAAAAdAAYAAAADABUAAAAdAAcAAAADABUAAAAdAAgAAAADABUAAAAdAAkAAAADABUAAAAdAAoAAAADABUAAAAdAAsAAAADABUAAAAdAAwAAAADABUAAAAdAA0AAAADABUAAAAdAA4AAAADABUAAAAdAA8AAAADABUAAAAeAAAAAAADABUAAAAeAAEAAAADABUAAAAeAAIAAAADABUAAAAeAAMAAAADABUAAAAeAAQAAAADABUAAAAeAAUAAAADABUAAAAeAAYAAAADABUAAAAeAAcAAAADABUAAAAeAAgAAAADABUAAAAeAAkAAAADABUAAAAeAAoAAAADABUAAAAeAAsAAAADABUAAAAeAAwAAAADABUAAAAeAA0AAAADABUAAAAeAA4AAAADABUAAAAeAA8AAAADABUAAAAfAAAAAAADABUAAAAfAAEAAAADABUAAAAfAAIAAAADABUAAAAfAAMAAAADABUAAAAfAAQAAAADABUAAAAfAAUAAAADABUAAAAfAAYAAAADABUAAAAfAAcAAAADABUAAAAfAAgAAAADABUAAAAfAAkAAAADABUAAAAfAAoAAAADABUAAAAfAAsAAAADABUAAAAfAAwAAAADABUAAAAfAA0AAAADABUAAAAfAA4AAAADABUAAAAfAA8AAAADABUAAAAgAAAAAAADABUAAAAgAAEAAAADABUAAAAgAAIAAAADABUAAAAgAAMAAAADABUAAAAgAAQAAAADABUAAAAgAAUAAAADABUAAAAgAAYAAAADABUAAAAgAAcAAAADABUAAAAgAAgAAAADABUAAAAgAAkAAAADABUAAAAgAAoAAAADABUAAAAgAAsAAAADABUAAAAgAAwAAAADABUAAAAgAA0AAAADABUAAAAgAA4AAAADABUAAAAgAA8AAAADABUAAAAhAAAAAAADABUAAAAhAAEAAAADABUAAAAhAAIAAAADABUAAAAhAAMAAAADABUAAAAhAAQAAAADABUAAAAhAAUAAAADABUAAAAhAAYAAAADABUAAAAhAAcAAAADABUAAAAhAAgAAAADABUAAAAhAAkAAAADABUAAAAhAAoAAAADABUAAAAhAAsAAAADABUAAAAhAAwAAAADABUAAAAhAA0AAAADABUAAAAhAA4AAAADABUAAAAhAA8AAAADABUAAAAiAAAAAAADABUAAAAiAAEAAAADABUAAAAiAAIAAAADABUAAAAiAAMAAAADABUAAAAiAAQAAAADABUAAAAiAAUAAAADABUAAAAiAAYAAAADABUAAAAiAAcAAAADABUAAAAiAAgAAAADABUAAAAiAAkAAAADABUAAAAiAAoAAAADABUAAAAiAAsAAAADABUAAAAiAAwAAAADABUAAAAiAA0AAAADABUAAAAiAA4AAAADABUAAAAiAA8AAAADABUAAAAjAAAAAAADABUAAAAjAAEAAAADABUAAAAjAAIAAAADABUAAAAjAAMAAAADABUAAAAjAAQAAAADABUAAAAjAAUAAAADABUAAAAjAAYAAAADABUAAAAjAAcAAAADABUAAAAjAAgAAAADABUAAAAjAAkAAAADABUAAAAjAAoAAAADABUAAAAjAAsAAAADABUAAAAjAAwAAAADABUAAAAjAA0AAAADABUAAAAjAA4AAAADABUAAAAjAA8AAAADABUAAAAkAAAAAAADABUAAAAkAAEAAAADABUAAAAkAAIAAAADABUAAAAkAAMAAAADABUAAAAkAAQAAAADABUAAAAkAAUAAAADABUAAAAkAAYAAAADABUAAAAkAAcAAAADABUAAAAkAAgAAAADABUAAAAkAAkAAAADABUAAAAkAAoAAAADABUAAAAkAAsAAAADABUAAAAkAAwAAAADABUAAAAkAA0AAAADABUAAAAkAA4AAAADABUAAAAkAA8AAAADABUAAAAlAAAAAAADABUAAAAlAAEAAAADABUAAAAlAAIAAAADABUAAAAlAAMAAAADABUAAAAlAAQAAAADABUAAAAlAAUAAAADABUAAAAlAAYAAAADABUAAAAlAAcAAAADABUAAAAlAAgAAAADABUAAAAlAAkAAAADABUAAAAlAAoAAAADABUAAAAlAAsAAAADABUAAAAlAAwAAAADABUAAAAlAA0AAAADABUAAAAlAA4AAAADABUAAAAlAA8AAAADABUAAAAmAAAAAAADABUAAAAmAAEAAAADABUAAAAmAAIAAAADABUAAAAmAAMAAAADABUAAAAmAAQAAAADABUAAAAmAAUAAAADABUAAAAmAAYAAAADABUAAAAmAAcAAAADABUAAAAmAAgAAAADABUAAAAmAAkAAAADABUAAAAmAAoAAAADABUAAAAmAAsAAAADABUAAAAmAAwAAAADABUAAAAmAA0AAAADABUAAAAmAA4AAAADABUAAAAmAA8AAAADABUAAAAnAAAAAAADABUAAAAnAAEAAAADABUAAAAnAAIAAAADABUAAAAnAAMAAAADABUAAAAnAAQAAAADABUAAAAnAAUAAAADABUAAAAnAAYAAAADABUAAAAnAAcAAAADABUAAAAnAAgAAAADABUAAAAnAAkAAAADABUAAAAnAAoAAAADABUAAAAnAAsAAAADABUAAAAnAAwAAAADABUAAAAnAA0AAAADABUAAAAnAA4AAAADABUAAAAnAA8AAAADABUAAAAoAAAAAAADABUAAAAoAAEAAAADABUAAAAoAAIAAAADABUAAAAoAAMAAAADABUAAAAoAAQAAAADABUAAAAoAAUAAAADABUAAAAoAAYAAAADABUAAAAoAAcAAAADABUAAAAoAAgAAAADABUAAAAoAAkAAAADABUAAAAoAAoAAAADABUAAAAoAAsAAAADABUAAAAoAAwAAAADABUAAAAoAA0AAAADABUAAAAoAA4AAAADABUAAAAoAA8AAAADABUAAAApAAAAAAADABUAAAApAAEAAAADABUAAAApAAIAAAADABUAAAApAAMAAAADABUAAAApAAQAAAADABUAAAApAAUAAAADABUAAAApAAYAAAADABUAAAApAAcAAAADABUAAAApAAgAAAADABUAAAApAAkAAAADABUAAAApAAoAAAADABUAAAApAAsAAAADABUAAAApAAwAAAADABUAAAApAA0AAAADABUAAAApAA4AAAADABUAAAApAA8AAAADABUAAAAqAAAAAAADABUAAAAqAAEAAAADABUAAAAqAAIAAAADABUAAAAqAAMAAAADABUAAAAqAAQAAAADABUAAAAqAAUAAAADABUAAAAqAAYAAAADABUAAAAqAAcAAAADABUAAAAqAAgAAAADABUAAAAqAAkAAAADABUAAAAqAAoAAAADABUAAAAqAAsAAAADABUAAAAqAAwAAAADABUAAAAqAA0AAAADABUAAAAqAA4AAAADABUAAAAqAA8AAAADABUAAAArAAAAAAADABUAAAArAAEAAAADABUAAAArAAIAAAADABUAAAArAAMAAAADABUAAAArAAQAAAADABUAAAArAAUAAAADABUAAAArAAYAAAADABUAAAArAAcAAAADABUAAAArAAgAAAADABUAAAArAAkAAAADABUAAAArAAoAAAADABUAAAArAAsAAAADABUAAAArAAwAAAADABUAAAArAA0AAAADABUAAAArAA4AAAADABUAAAArAA8AAAADABUAAAAsAAAAAAADABUAAAAsAAEAAAADABUAAAAsAAIAAAADABUAAAAsAAMAAAADABUAAAAsAAQAAAADABUAAAAsAAUAAAADABUAAAAsAAYAAAADABUAAAAsAAcAAAADABUAAAAsAAgAAAADABUAAAAsAAkAAAADABUAAAAsAAoAAAADABUAAAAsAAsAAAADABUAAAAsAAwAAAADABUAAAAsAA0AAAADABUAAAAsAA4AAAADABUAAAAsAA8AAAADABUAAAAtAAAAAAADABUAAAAtAAEAAAADABUAAAAtAAIAAAADABUAAAAtAAMAAAADABUAAAAtAAQAAAADABUAAAAtAAUAAAADABUAAAAtAAYAAAADABUAAAAtAAcAAAADABUAAAAtAAgAAAADABUAAAAtAAkAAAADABUAAAAtAAoAAAADABUAAAAtAAsAAAADABUAAAAtAAwAAAADABUAAAAtAA0AAAADABUAAAAtAA4AAAADABUAAAAtAA8AAAADABUAAAAuAAAAAAADABUAAAAuAAEAAAADABUAAAAuAAIAAAADABUAAAAuAAMAAAADABUAAAAuAAQAAAADABUAAAAuAAUAAAADABUAAAAuAAYAAAADABUAAAAuAAcAAAADABUAAAAuAAgAAAADABUAAAAuAAkAAAADABUAAAAuAAoAAAADABUAAAAuAAsAAAADABUAAAAuAAwAAAADABUAAAAuAA0AAAADABUAAAAuAA4AAAADABUAAAAuAA8AAAADABUAAAAvAAAAAAADABUAAAAvAAEAAAADABUAAAAvAAIAAAADABUAAAAvAAMAAAADABUAAAAvAAQAAAADABUAAAAvAAUAAAADABUAAAAvAAYAAAADABUAAAAvAAcAAAADABUAAAAvAAgAAAADABUAAAAvAAkAAAADABUAAAAvAAoAAAADABUAAAAvAAsAAAADABUAAAAvAAwAAAADABUAAAAvAA0AAAADABUAAAAvAA4AAAADABUAAAAvAA8AAAADABUAAAAwAAAAAAADABUAAAAwAAEAAAADABUAAAAwAAIAAAADABUAAAAwAAMAAAADABUAAAAwAAQAAAADABUAAAAwAAUAAAADABUAAAAwAAYAAAADABUAAAAwAAcAAAADABUAAAAwAAgAAAADABUAAAAwAAkAAAADABUAAAAwAAoAAAADABUAAAAwAAsAAAADABUAAAAwAAwAAAADABUAAAAwAA0AAAADABUAAAAwAA4AAAADABUAAAAwAA8AAAADABUAAAAxAAAAAAADABUAAAAxAAEAAAADABUAAAAxAAIAAAADABUAAAAxAAMAAAADABUAAAAxAAQAAAADABUAAAAxAAUAAAADABUAAAAxAAYAAAADABUAAAAxAAcAAAADABUAAAAxAAgAAAADABUAAAAxAAkAAAADABUAAAAxAAoAAAADABUAAAAxAAsAAAADABUAAAAxAAwAAAADABUAAAAxAA0AAAADABUAAAAxAA4AAAADABUAAAAxAA8AAAADABUAAAAyAAAAAAADABUAAAAyAAEAAAADABUAAAAyAAIAAAADABUAAAAyAAMAAAADABUAAAAyAAQAAAADABUAAAAyAAUAAAADABUAAAAyAAYAAAADABUAAAAyAAcAAAADABUAAAAyAAgAAAADABUAAAAyAAkAAAADABUAAAAyAAoAAAADABUAAAAyAAsAAAADABUAAAAyAAwAAAADABUAAAAyAA0AAAADABUAAAAyAA4AAAADABUAAAAyAA8AAAADABUAAAAzAAAAAAADABUAAAAzAAEAAAADABUAAAAzAAIAAAADABUAAAAzAAMAAAADABUAAAAzAAQAAAADABUAAAAzAAUAAAADABUAAAAzAAYAAAADABUAAAAzAAcAAAADABUAAAAzAAgAAAADABUAAAAzAAkAAAADABUAAAAzAAoAAAADABUAAAAzAAsAAAADABUAAAAzAAwAAAADABUAAAAzAA0AAAADABUAAAAzAA4AAAADABUAAAAzAA8AAAADABUAAAA0AAAAAAADABUAAAA0AAEAAAADABUAAAA0AAIAAAADABUAAAA0AAMAAAADABUAAAA0AAQAAAADABUAAAA0AAUAAAADABUAAAA0AAYAAAADABUAAAA0AAcAAAADABUAAAA0AAgAAAADABUAAAA0AAkAAAADABUAAAA0AAoAAAADABUAAAA0AAsAAAADABUAAAA0AAwAAAADABUAAAA0AA0AAAADABUAAAA0AA4AAAADABUAAAA0AA8AAAADABUAAAA1AAAAAAADABUAAAA1AAEAAAADABUAAAA1AAIAAAADABUAAAA1AAMAAAADABUAAAA1AAQAAAADABUAAAA1AAUAAAADABUAAAA1AAYAAAADABUAAAA1AAcAAAADABUAAAA1AAgAAAADABUAAAA1AAkAAAADABUAAAA1AAoAAAADABUAAAA1AAsAAAADABUAAAA1AAwAAAADABUAAAA1AA0AAAADABUAAAA1AA4AAAADABUAAAA1AA8AAAADABUAAAA2AAAAAAADABUAAAA2AAEAAAADABUAAAA2AAIAAAADABUAAAA2AAMAAAADABUAAAA2AAQAAAADABUAAAA2AAUAAAADABUAAAA2AAYAAAADABUAAAA2AAcAAAADABUAAAA2AAgAAAADABUAAAA2AAkAAAADABUAAAA2AAoAAAADABUAAAA2AAsAAAADABUAAAA2AAwAAAADABUAAAA2AA0AAAADABUAAAA2AA4AAAADABUAAAA2AA8AAAADABUAAAA3AAAAAAADABUAAAA3AAEAAAADABUAAAA3AAIAAAADABUAAAA3AAMAAAADABUAAAA3AAQAAAADABUAAAA3AAUAAAADABUAAAA3AAYAAAADABUAAAA3AAcAAAADABUAAAA3AAgAAAADABUAAAA3AAkAAAADABUAAAA3AAoAAAADABUAAAA3AAsAAAADABUAAAA3AAwAAAADABUAAAA3AA0AAAADABUAAAA3AA4AAAADABUAAAA3AA8AAAADABUAAAA4AAAAAAADABUAAAA4AAEAAAADABUAAAA4AAIAAAADABUAAAA4AAMAAAADABUAAAA4AAQAAAADABUAAAA4AAUAAAADABUAAAA4AAYAAAADABUAAAA4AAcAAAADABUAAAA4AAgAAAADABUAAAA4AAkAAAADABUAAAA4AAoAAAADABUAAAA4AAsAAAADABUAAAA4AAwAAAADABUAAAA4AA0AAAADABUAAAA4AA4AAAADABUAAAA4AA8AAAADABUAAAA5AAAAAAADABUAAAA5AAEAAAADABUAAAA5AAIAAAADABUAAAA5AAMAAAADABUAAAA5AAQAAAADABUAAAA5AAUAAAADABUAAAA5AAYAAAADABUAAAA5AAcAAAADABUAAAA5AAgAAAADABUAAAA5AAkAAAADABUAAAA5AAoAAAADABUAAAA5AAsAAAADABUAAAA5AAwAAAADABUAAAA5AA0AAAADABUAAAA5AA4AAAADABUAAAA5AA8AAAADABUAAAA6AAAAAAADABUAAAA6AAEAAAADABUAAAA6AAIAAAADABUAAAA6AAMAAAADABUAAAA6AAQAAAADABUAAAA6AAUAAAADABUAAAA6AAYAAAADABUAAAA6AAcAAAADABUAAAA6AAgAAAADABUAAAA6AAkAAAADABUAAAA6AAoAAAADABUAAAA6AAsAAAADABUAAAA6AAwAAAADABUAAAA6AA0AAAADABUAAAA6AA4AAAADABUAAAA6AA8AAAADABUAAAA7AAAAAAADABUAAAA7AAEAAAADABUAAAA7AAIAAAADABUAAAA7AAMAAAADABUAAAA7AAQAAAADABUAAAA7AAUAAAADABUAAAA7AAYAAAADABUAAAA7AAcAAAADABUAAAA7AAgAAAADABUAAAA7AAkAAAADABUAAAA7AAoAAAADABUAAAA7AAsAAAADABUAAAA7AAwAAAADABUAAAA7AA0AAAADABUAAAA7AA4AAAADABUAAAA7AA8AAAADABUAAAA8AAAAAAADABUAAAA8AAEAAAADABUAAAA8AAIAAAADABUAAAA8AAMAAAADABUAAAA8AAQAAAADABUAAAA8AAUAAAADABUAAAA8AAYAAAADABUAAAA8AAcAAAADABUAAAA8AAgAAAADABUAAAA8AAkAAAADABUAAAA8AAoAAAADABUAAAA8AAsAAAADABUAAAA8AAwAAAADABUAAAA8AA0AAAADABUAAAA8AA4AAAADABUAAAA8AA8AAAADABUAAAA9AAAAAAADABUAAAA9AAEAAAADABUAAAA9AAIAAAADABUAAAA9AAMAAAADABUAAAA9AAQAAAADABUAAAA9AAUAAAADABUAAAA9AAYAAAADABUAAAA9AAcAAAADABUAAAA9AAgAAAADABUAAAA9AAkAAAADABUAAAA9AAoAAAADABUAAAA9AAsAAAADABUAAAA9AAwAAAADABUAAAA9AA0AAAADABUAAAA9AA4AAAADABUAAAA9AA8AAAADABUAAAA+AAAAAAADABUAAAA+AAEAAAADABUAAAA+AAIAAAADABUAAAA+AAMAAAADABUAAAA+AAQAAAADABUAAAA+AAUAAAADABUAAAA+AAYAAAADABUAAAA+AAcAAAADABUAAAA+AAgAAAADABUAAAA+AAkAAAADABUAAAA+AAoAAAADABUAAAA+AAsAAAADABUAAAA+AAwAAAADABUAAAA+AA0AAAADABUAAAA+AA4AAAADABUAAAA+AA8AAAADABUAAAA/AAAAAAADABUAAAA/AAEAAAADABUAAAA/AAIAAAADABUAAAA/AAMAAAADABUAAAA/AAQAAAADABUAAAA/AAUAAAADABUAAAA/AAYAAAADABUAAAA/AAcAAAADABUAAAA/AAgAAAADABUAAAA/AAkAAAADABUAAAA/AAoAAAADABUAAAA/AAsAAAADABUAAAA/AAwAAAADABUAAAA/AA0AAAADABUAAAA/AA4AAAADABUAAAA/AA8AAAADABUAAAAEAA4AAAADABUAAAAEAA8AAAADABUAAAA=")
tile_set = ExtResource("2_bwmbc")

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = -2
z_as_relative = false
tile_map_data = PackedByteArray("AAAdAA0AAAABABUAAAAeAA0AAAACABUAAAADAAQAAAAAABQAAAADAAUAAAAAABUAAAAEAAQAAAABABQAAAAEAAUAAAABABUAAAAFAAQAAAABABQAAAAFAAUAAAABABUAAAAGAAQAAAACABQAAAAGAAUAAAACABUAAAASAAMAAAAAABQAAAASAAQAAAAAABUAAAATAAMAAAABABQAAAATAAQAAAABABUAAAAUAAMAAAABABQAAAAUAAQAAAABABUAAAAVAAMAAAACABQAAAAVAAQAAAACABUAAAAJAAgAAAAAABQAAAAJAAkAAAAAABUAAAAKAAgAAAABABQAAAAKAAkAAAABABUAAAALAAgAAAACABQAAAALAAkAAAACABUAAAAcAAwAAAAAABQAAAAcAA0AAAAAABUAAAAdAAwAAAABABQAAAAeAAwAAAACABQAAAAjAAgAAAAAABQAAAAjAAkAAAAAABUAAAAkAAgAAAABABQAAAAkAAkAAAABABUAAAAlAAgAAAACABQAAAAlAAkAAAACABUAAAAmAAcAAAAAABQAAAAmAAgAAAAAABUAAAAnAAcAAAABABQAAAAnAAgAAAABABUAAAAoAAcAAAACABQAAAAoAAgAAAACABUAAAAAAAwAAAACABQAAAAAAA0AAAACABUAAAAuAAwAAAAAABQAAAAuAA0AAAAAABUAAAAvAAwAAAABABQAAAAvAA0AAAABABUAAAAwAAwAAAACABQAAAAwAA0AAAACABUAAAAzAAQAAAAAABQAAAAzAAUAAAAAABUAAAA0AAQAAAABABQAAAA0AAUAAAABABUAAAA1AAQAAAABABQAAAA1AAUAAAABABUAAAA2AAQAAAACABQAAAA2AAUAAAACABUAAAA5AAgAAAAAABQAAAA5AAkAAAAAABUAAAA6AAgAAAABABQAAAA6AAkAAAABABUAAAA7AAgAAAACABQAAAA7AAkAAAACABUAAAA=")
tile_set = ExtResource("2_bwmbc")

[node name="Bricks" type="TileMapLayer" parent="TileMap"]
z_as_relative = false
tile_map_data = PackedByteArray("AAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA8AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAeAA4AAAAAAAAAAAAeAA8AAAAAAAAAAAAfAA4AAAAAAAAAAAAfAA8AAAAAAAAAAAAgAA4AAAAAAAAAAAAgAA8AAAAAAAAAAAAhAA4AAAAAAAAAAAAhAA8AAAAAAAAAAAAiAA4AAAAAAAAAAAAiAA8AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAA8AAAAAAAAAAAAkAA4AAAAAAAAAAAAkAA8AAAAAAAAAAAAlAA4AAAAAAAAAAAAlAA8AAAAAAAAAAAAmAA4AAAAAAAAAAAAmAA8AAAAAAAAAAAAnAA4AAAAAAAAAAAAnAA8AAAAAAAAAAAAoAA4AAAAAAAAAAAAoAA8AAAAAAAAAAAApAA4AAAAAAAAAAAApAA8AAAAAAAAAAAAoAA0AAAAAAAEAAAApAA0AAAAAAAEAAAAqAA0AAAAAAAEAAAArAA0AAAAAAAEAAAAsAA0AAAAAAAEAAAAtAA0AAAAAAAEAAAAuAA0AAAAAAAEAAAAvAA0AAAAAAAEAAAAwAA0AAAAAAAEAAAArAAoAAAAAAAEAAAAsAAoAAAAAAAEAAAAtAAoAAAAAAAEAAAAuAAoAAAAAAAEAAAAvAAoAAAAAAAEAAAAwAAoAAAAAAAEAAAAwAAkAAAAAAAEAAAAvAAkAAAAAAAEAAAAuAAkAAAAAAAEAAAAtAAkAAAAAAAEAAAAsAAkAAAAAAAEAAAAtAAgAAAAAAAEAAAAuAAgAAAAAAAEAAAAvAAgAAAAAAAEAAAAwAAgAAAAAAAEAAAAwAAcAAAAAAAEAAAAvAAcAAAAAAAEAAAAuAAcAAAAAAAEAAAAvAAYAAAAAAAEAAAAwAAYAAAAAAAEAAAAwAAUAAAAAAAEAAAAxAAUAAAAAAAEAAAAyAAUAAAAAAAEAAAAzAAUAAAAAAAEAAAA0AAUAAAAAAAEAAAA1AAUAAAAAAAEAAAA2AAUAAAAAAAEAAAA3AAUAAAAAAAEAAAA4AAUAAAAAAAEAAAA5AAUAAAAAAAEAAAA6AAUAAAAAAAEAAAA7AAUAAAAAAAEAAAAqAAsAAAAAAAEAAAArAAsAAAAAAAEAAAAsAAsAAAAAAAEAAAAtAAsAAAAAAAEAAAAuAAsAAAAAAAEAAAAvAAsAAAAAAAEAAAAwAAsAAAAAAAEAAAAwAAwAAAAAAAEAAAAvAAwAAAAAAAEAAAAuAAwAAAAAAAEAAAAtAAwAAAAAAAEAAAAsAAwAAAAAAAEAAAArAAwAAAAAAAEAAAAqAAwAAAAAAAEAAAApAAwAAAAAAAEAAAA+AAMAAAAAAAEAAAA+AAQAAAAAAAEAAAA+AAUAAAAAAAEAAAA+AAYAAAAAAAEAAAA+AAcAAAAAAAEAAAA+AAgAAAAAAAEAAAA+AAkAAAAAAAEAAAA+AAoAAAAAAAEAAAA+AAsAAAAAAAEAAAA+AAwAAAAAAAEAAAA+AA0AAAAAAAEAAAA/AAMAAAAAAAEAAAA/AAQAAAAAAAEAAAA/AAUAAAAAAAEAAAA/AAYAAAAAAAEAAAA/AAcAAAAAAAEAAAA/AAgAAAAAAAEAAAA/AAkAAAAAAAEAAAA/AAoAAAAAAAEAAAA/AAsAAAAAAAEAAAA/AAwAAAAAAAEAAAA/AA0AAAAAAAEAAAAqAA4AAAAAAAAAAAAqAA8AAAAAAAAAAAArAA4AAAAAAAAAAAArAA8AAAAAAAAAAAAsAA4AAAAAAAAAAAAsAA8AAAAAAAAAAAAtAA4AAAAAAAAAAAAtAA8AAAAAAAAAAAAuAA4AAAAAAAAAAAAuAA8AAAAAAAAAAAAvAA4AAAAAAAAAAAAvAA8AAAAAAAAAAAAwAA4AAAAAAAAAAAAwAA8AAAAAAAAAAAAxAA4AAAAAAAAAAAAxAA8AAAAAAAAAAAAyAA4AAAAAAAAAAAAyAA8AAAAAAAAAAAAzAA4AAAAAAAAAAAAzAA8AAAAAAAAAAAA0AA4AAAAAAAAAAAA0AA8AAAAAAAAAAAA1AA4AAAAAAAAAAAA1AA8AAAAAAAAAAAA2AA4AAAAAAAAAAAA2AA8AAAAAAAAAAAA3AA4AAAAAAAAAAAA3AA8AAAAAAAAAAAA4AA4AAAAAAAAAAAA4AA8AAAAAAAAAAAA5AA4AAAAAAAAAAAA5AA8AAAAAAAAAAAA6AA4AAAAAAAAAAAA6AA8AAAAAAAAAAAA7AA4AAAAAAAAAAAA7AA8AAAAAAAAAAAA8AA4AAAAAAAAAAAA8AA8AAAAAAAAAAAA9AA4AAAAAAAAAAAA9AA8AAAAAAAAAAAA+AA4AAAAAAAAAAAA+AA8AAAAAAAAAAAA/AA4AAAAAAAAAAAA/AA8AAAAAAAAAAAAMAAoAAAAFAA0AAAANAAoAAAAGAA0AAAAOAAoAAAAHAA0AAAANAAsAAAAKAAAAAAARAAcAAAAKAAAAAAATAA0AAAAKAAAAAAAXAAcAAAAKAAAAAAAYAA0AAAAKAAAAAAAbAAkAAAAKAAAAAAAgAAYAAAAKAAAAAAAiAAwAAAAKAAAAAAAiAA0AAAAKAAEAAAAgAAcAAAAKAAEAAAAgAAgAAAAKAAEAAAAgAAkAAAAKAAEAAAAgAAoAAAAKAAEAAAAgAAsAAAAGAA0AAAAgAAwAAAAKAAEAAAAgAA0AAAAKAAEAAAAbAAoAAAAKAAEAAAAbAAsAAAAKAAEAAAAbAAwAAAAKAAEAAAAbAA0AAAAKAAEAAAAXAAgAAAAKAAEAAAAXAAkAAAAKAAEAAAAXAAoAAAAKAAEAAAAXAAsAAAAKAAEAAAAXAAwAAAAGAA0AAAAXAA0AAAAKAAEAAAARAAgAAAAKAAEAAAARAAkAAAAKAAEAAAARAAoAAAAKAAEAAAARAAsAAAAKAAEAAAARAAwAAAAKAAEAAAARAA0AAAAKAAEAAAANAAwAAAAKAAEAAAANAA0AAAAKAAEAAAAQAAYAAAAFAA0AAAARAAYAAAAGAA0AAAASAAYAAAAHAA0AAAASAAwAAAAFAA0AAAATAAwAAAAGAA0AAAAUAAwAAAAHAA0AAAAWAAYAAAAFAA0AAAAXAAYAAAAGAA0AAAAYAAYAAAAHAA0AAAAaAAgAAAAFAA0AAAAbAAgAAAAGAA0AAAAcAAgAAAAHAA0AAAAWAAwAAAAFAA0AAAAeAAUAAAAFAA0AAAAfAAsAAAAFAA0AAAAlAAsAAAAHAA0AAAAiAAUAAAAHAA0AAAAaAAwAAAAHAA0AAAAYAAwAAAAGAA0AAAAZAAwAAAAGAA0AAAAfAAUAAAAGAA0AAAAgAAUAAAAGAA0AAAAhAAUAAAAGAA0AAAAhAAsAAAAGAA0AAAAiAAsAAAAGAA0AAAAjAAsAAAAGAA0AAAAkAAsAAAAGAA0AAAA=")
tile_set = ExtResource("3_fnonx")

[node name="WarpZone" parent="." instance=ExtResource("8_dfy0j")]
position = Vector2(888, 48)

[node name="TileMapLayer" parent="WarpZone" index="0"]
tile_map_data = PackedByteArray("AAD7/wgAAAAAAAwAAAD7/wkAAAAAAA0AAAD8/wgAAAABAAwAAAD8/wkAAAABAA0AAAD//wgAAAAAAAwAAAD//wkAAAAAAA0AAAAAAAgAAAABAAwAAAAAAAkAAAABAA0AAAADAAgAAAAAAAwAAAADAAkAAAAAAA0AAAAEAAgAAAABAAwAAAAEAAkAAAABAA0AAAD7/woAAAAAAA0AAAD8/woAAAABAA0AAAD//woAAAAAAA0AAAAAAAoAAAABAA0AAAADAAoAAAAAAA0AAAAEAAoAAAABAA0AAAA=")

[node name="LevelA" parent="WarpZone/Text" index="1"]
text = "8"

[node name="LevelB" parent="WarpZone/Text" index="2"]
text = "7"

[node name="LevelC" parent="WarpZone/Text" index="3"]
text = "6"

[node name="EnterPoint" parent="WarpZone/EnterPoints" index="0"]
new_level = "8-1"
spawn_point_name = "SpawnPoint"

[node name="EnterPoint2" parent="WarpZone/EnterPoints" index="1"]
new_level = "8-1"
spawn_point_name = "SpawnPoint"

[node name="EnterPoint3" parent="WarpZone/EnterPoints" index="2"]
new_level = "8-1"
spawn_point_name = "SpawnPoint"

[node name="VisibleOnScreenEnabler2D" parent="WarpZone" index="4"]
position = Vector2(3.8147e-06, 104)
scale = Vector2(10.4, 7.2)

[node name="Boundaries" type="Node" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Boundaries"]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftWall"]
position = Vector2(-4, 112)
shape = SubResource("RectangleShape2D_11pcs")

[node name="RightWall" type="StaticBody2D" parent="Boundaries"]
position = Vector2(1024, 0)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightWall"]
position = Vector2(4, 80)
shape = SubResource("RectangleShape2D_icqrj")

[node name="SpawnPoints" type="Node" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="SpawnPoints"]
position = Vector2(32, 224)
script = ExtResource("4_4lsgw")

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(72, 256)
script = ExtResource("4_4lsgw")
direction = 1
type = 2

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(200, 152)

[node name="Coin2" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(216, 152)

[node name="Coin3" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(232, 152)

[node name="Coin17" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(264, 88)

[node name="Coin18" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(280, 88)

[node name="Coin19" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(296, 88)

[node name="Coin4" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(360, 88)

[node name="Coin5" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(376, 88)

[node name="Coin6" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(392, 88)

[node name="Coin7" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(424, 120)

[node name="Coin8" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(440, 120)

[node name="Coin9" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(456, 120)

[node name="Coin10" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(488, 72)

[node name="Coin11" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(504, 72)

[node name="Coin12" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(520, 72)

[node name="Coin13" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(536, 72)

[node name="Coin16" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(552, 72)

[node name="Coin14" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(568, 168)

[node name="Coin15" parent="Coins" instance=ExtResource("5_eg1vl")]
position = Vector2(584, 168)

[node name="Player" parent="." instance=ExtResource("6_lew0c")]
position = Vector2(32, 224)

[node name="Camera2D" type="Camera2D" parent="Player"]

[editable path="WarpZone"]
